# finance-surveillance

./: Alert.h  AlertObserver.cpp  AlertObserver.h  CMakeLists.txt  CeilingProcessor.cpp  CeilingProcessor.h  ChartFraudObserver.h  ChartOrderObserver.h  DbConnector.cpp  DbConnector.h  Euronext_QT.sln  FloorProcessor.cpp  FloorProcessor.h  FraudMonitor.cpp  IFraudObserver.h  IOrderObserver.h  IProcessor.h  PumpDumpProcessor.cpp  PumpDumpProcessor.h  QT_LineChart.pro  QT_LineChart.qtvscr  QT_LineChart.vcxproj  QT_LineChart.vcxproj.filters  QuoteProcessor.h  SearchableTableWidget.h  SpoofingProcessor.cpp  SpoofingProcessor.h  WashProcessor.cpp  WashProcessor.h  main.cpp  multipleViewsWindow.cpp  multipleViewsWindow.h  order.h  orders.json
